--- a/pytorch_workflow.ipynb
+++ b/pytorch_workflow.ipynb
@@ -287,6 +287,33 @@
     "\n",
     "torch.save(obj=model_0.state_dict(), f=save_path)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(OrderedDict([('weights', tensor([0.6999])), ('bias', tensor([0.3000]))]),\n",
+       " OrderedDict([('weights', tensor([0.6999])), ('bias', tensor([0.3000]))]))"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load model\n",
+    "\n",
+    "model_0_1 = LinearRegressionModel()\n",
+    "\n",
+    "model_0_1.load_state_dict(torch.load(f=save_path))\n",
+    "\n",
+    "model_0.state_dict(), model_0_1.state_dict()"
+   ]
   }
  ],
  "metadata": {
