--- a/neural_network_classification.ipynb
+++ b/neural_network_classification.ipynb
@@ -9,14 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sklearn\n",
     "from sklearn.datasets import make_circles\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from torch import nn"
    ]
   },
   {
@@ -226,6 +229,279 @@
     "            y=x[:, 1],\n",
     "            c=y,\n",
     "            cmap=plt.cm.RdYlBu)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## check input and output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1000, 2), (1000,))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.75424625 0.23148074], 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#view first sample\n",
+    "x_sample = x[0]\n",
+    "y_sample = y[0]\n",
+    "\n",
+    "print(f\"{x_sample}, {y_sample}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## turn data into tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[ 0.7542,  0.2315],\n",
+       "         [-0.7562,  0.1533],\n",
+       "         [-0.8154,  0.1733],\n",
+       "         [-0.3937,  0.6929],\n",
+       "         [ 0.4422, -0.8967]]),\n",
+       " tensor([1., 1., 1., 1., 0.]))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#turn data into tensors\n",
+    "X = torch.from_numpy(x).type(torch.float)\n",
+    "Y = torch.from_numpy(y).type(torch.float)\n",
+    "\n",
+    "X[:5], Y[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([1000, 2]), torch.Size([1000]))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape, Y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800, 200)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#split into train / test\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(\n",
+    "    X, Y, test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "len(X_train), len(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## build model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CircleModelV0(nn.Module):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.layer_1 = nn.Linear(in_features=2, out_features=5)     # input layer\n",
+    "        self.layer_2 = nn.Linear(in_features=5, out_features=1)     # hidden layer\n",
+    "\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.layer_2(self.layer_1(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CircleModelV0(\n",
+       "  (layer_1): Linear(in_features=2, out_features=5, bias=True)\n",
+       "  (layer_2): Linear(in_features=5, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#instantiate\n",
+    "model_1 = CircleModelV0()\n",
+    "model_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): Linear(in_features=2, out_features=5, bias=True)\n",
+       "  (1): Linear(in_features=5, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#same model with nn.Sequential()\n",
+    "model_2 = nn.Sequential(\n",
+    "    nn.Linear(in_features=2, out_features=5),\n",
+    "    nn.Linear(in_features=5, out_features=1)\n",
+    ")\n",
+    "\n",
+    "model_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('0.weight',\n",
+       "              tensor([[-0.4527, -0.0093],\n",
+       "                      [-0.4179, -0.0152],\n",
+       "                      [-0.4258, -0.6502],\n",
+       "                      [-0.0631, -0.4715],\n",
+       "                      [-0.2212,  0.1113]])),\n",
+       "             ('0.bias', tensor([ 0.1318, -0.4544, -0.0831,  0.4060, -0.4110])),\n",
+       "             ('1.weight',\n",
+       "              tensor([[ 0.2898,  0.2743,  0.2229, -0.1947, -0.0620]])),\n",
+       "             ('1.bias', tensor([0.1255]))])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_2.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len = 200, shape = torch.Size([200, 1])\n",
+      "len = 200, shape = torch.Size([200, 2])\n",
+      "tensor([[0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.]])\n",
+      "tensor([1., 0., 1., 0., 1., 1., 0., 0., 1., 0.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#make predictions\n",
+    "with torch.inference_mode():\n",
+    "    untrained_pred = model_2(X_test)\n",
+    "    print(f\"len = {len(untrained_pred.round().abs())}, shape = {untrained_pred.shape}\")\n",
+    "    print(f\"len = {len(X_test)}, shape = {X_test.shape}\")\n",
+    "    print(untrained_pred[:10].round().abs())\n",
+    "    print(Y_test[:10])"
    ]
   }
  ],
