--- a/neural_network_classification.ipynb
+++ b/neural_network_classification.ipynb
@@ -503,6 +503,20 @@
     "    print(untrained_pred[:10].round().abs())\n",
     "    print(Y_test[:10])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## setup loss function and optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
