--- a/neural_network_classification.ipynb
+++ b/neural_network_classification.ipynb
@@ -513,10 +513,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for classification, best loss funcs are adam, BCE and SGD for optim\n",
+    "loss_fn = nn.BCEWithLogitsLoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create optimizer\n",
+    "opimizer = torch.optim.SGD(params=model_2.parameters(),\n",
+    "                           lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#calculate accuracy (what % is correct)\n",
+    "def accuracy_fn(y_true, y_pred):\n",
+    "    correct = torch.eq(y_true, y_pred).sum().item()\n",
+    "    acc = (correct / len(y_pred)) * 100\n",
+    "    return acc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## train model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train loop\n"
+   ]
   }
  ],
  "metadata": {
