--- a/neural_network_classification.ipynb
+++ b/neural_network_classification.ipynb
@@ -554,11 +554,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.0394],\n",
+       "        [-0.1021],\n",
+       "        [ 0.2092],\n",
+       "        [-0.0079],\n",
+       "        [-0.1099]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# train loop\n"
+    "# view first 5 outputs\n",
+    "model_2.eval()\n",
+    "with torch.inference_mode():\n",
+    "    y_logits = model_2(X_test[:5])\n",
+    "y_logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.5098],\n",
+       "        [0.4745],\n",
+       "        [0.5521],\n",
+       "        [0.4980],\n",
+       "        [0.4725]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#use sigmoid activation function\n",
+    "y_pred_probs = torch.sigmoid(y_logits)\n",
+    "y_pred_probs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([True, True, True, True, True])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1., 0., 1., 0., 0.])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#find predicted labels\n",
+    "y_preds = torch.round(y_pred_probs)\n",
+    "\n",
+    "y_pred_labels = torch.round(torch.sigmoid(model_2(X_test[:5])))\n",
+    "\n",
+    "print(torch.eq(y_preds.squeeze(), y_pred_labels.squeeze()))\n",
+    "\n",
+    "y_preds.squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1., 0., 1., 0., 1.])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_test[:5]"
    ]
   }
  ],
