--- a/neural_network_classification.ipynb
+++ b/neural_network_classification.ipynb
@@ -523,18 +523,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "#create optimizer\n",
-    "opimizer = torch.optim.SGD(params=model_2.parameters(),\n",
+    "optimizer = torch.optim.SGD(params=model_2.parameters(),\n",
     "                           lr=0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,6 +658,77 @@
    ],
    "source": [
     "Y_test[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## build train and test loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 0 | loss: 0.69962 | acc: 49.12% | test_loss: 0.69387 | test_acc: 51.00%\n",
+      "epoch: 10 | loss: 0.69828 | acc: 49.50% | test_loss: 0.69338 | test_acc: 51.50%\n",
+      "epoch: 20 | loss: 0.69730 | acc: 49.75% | test_loss: 0.69314 | test_acc: 51.50%\n",
+      "epoch: 30 | loss: 0.69655 | acc: 49.75% | test_loss: 0.69305 | test_acc: 50.50%\n",
+      "epoch: 40 | loss: 0.69596 | acc: 50.12% | test_loss: 0.69304 | test_acc: 51.00%\n",
+      "epoch: 50 | loss: 0.69549 | acc: 50.12% | test_loss: 0.69308 | test_acc: 49.50%\n",
+      "epoch: 60 | loss: 0.69511 | acc: 50.12% | test_loss: 0.69316 | test_acc: 49.50%\n",
+      "epoch: 70 | loss: 0.69480 | acc: 50.62% | test_loss: 0.69325 | test_acc: 50.50%\n",
+      "epoch: 80 | loss: 0.69455 | acc: 50.50% | test_loss: 0.69336 | test_acc: 49.50%\n",
+      "epoch: 90 | loss: 0.69433 | acc: 50.50% | test_loss: 0.69347 | test_acc: 47.50%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pickletools import optimize\n",
+    "\n",
+    "\n",
+    "torch.manual_seed(1)\n",
+    "\n",
+    "epochs = 100\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "\n",
+    "    model_2.train()\n",
+    "\n",
+    "    y_logits = model_2(X_train).squeeze()\n",
+    "    y_pred = torch.round(torch.sigmoid(y_logits))\n",
+    "\n",
+    "    loss = loss_fn(y_logits,\n",
+    "                   Y_train)\n",
+    "\n",
+    "    acc = accuracy_fn(y_true=Y_train,\n",
+    "                      y_pred=y_pred)\n",
+    "\n",
+    "    optimizer.zero_grad()\n",
+    "\n",
+    "    loss.backward()\n",
+    "\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    model_2.eval()\n",
+    "\n",
+    "    with torch.inference_mode():\n",
+    "        test_logits = model_2(X_test).squeeze()\n",
+    "\n",
+    "        test_pred = torch.round(torch.sigmoid(test_logits))\n",
+    "\n",
+    "        test_loss = loss_fn(test_logits, Y_test)\n",
+    "\n",
+    "        test_acc = accuracy_fn(y_true=Y_test, y_pred=test_pred)\n",
+    "\n",
+    "        if epoch % 10 == 0:\n",
+    "            print(f\"epoch: {epoch} | loss: {loss:.5f} | acc: {acc:.2f}% | test_loss: {test_loss:.5f} | test_acc: {test_acc:.2f}%\")"
    ]
   }
  ],
