--- a/neural_network_classification.ipynb
+++ b/neural_network_classification.ipynb
@@ -1450,6 +1450,22 @@
     "\n",
     "plt.plot(sigmoid(A))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## multi-class classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
+   ]
   }
  ],
  "metadata": {
