--- a/neural_network_classification.ipynb
+++ b/neural_network_classification.ipynb
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1681,7 +1681,44 @@
     "    def forward(self, x):\n",
     "        return self.linear_layer_stack(x)\n",
     "\n",
-    "Model_5 = BlobModelV0(input_features=2, output_features=4)"
+    "model_5 = BlobModelV0(input_features=2, output_features=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "\n",
+    "optimizer = torch.optim.SGD(params=model_5.parameters(), lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([3, 1, 1, 3, 1, 1, 1, 1, 1, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#see current outputs\n",
+    "model_5.eval()\n",
+    "\n",
+    "with torch.inference_mode():\n",
+    "    y_logits = model_5(x_blob_test)\n",
+    "    y_pred_probs = torch.softmax(y_logits, dim=1)\n",
+    "    y_preds = torch.argmax(y_pred_probs, dim=1)\n",
+    "    print(y_preds[:10])\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1689,7 +1726,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#training loop\n"
+   ]
   }
  ],
  "metadata": {
