--- a/neural_network_classification.ipynb
+++ b/neural_network_classification.ipynb
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,18 +1606,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "#turn data into tensors\n",
     "x_blob = torch.from_numpy(x_blob).type(torch.float)\n",
-    "y_blob = torch.from_numpy(y_blob).type(torch.float)"
+    "y_blob = torch.from_numpy(y_blob).type(torch.LongTensor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,16 +1627,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc626fa2910>"
+       "<matplotlib.collections.PathCollection at 0x7fc6259fa700>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1686,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,14 +1697,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([3, 1, 1, 3, 1, 1, 1, 1, 1, 1])\n"
+      "tensor([0, 2, 2, 0, 0, 2, 2, 0, 2, 0])\n"
      ]
     }
    ],
@@ -1723,12 +1723,155 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch = 0\n",
+      "loss = 0.022898 | acc = 99.375000 | test loss = 0.011334 | test acc = 99.500000\n",
+      "epoch = 100\n",
+      "loss = 0.022650 | acc = 99.375000 | test loss = 0.011064 | test acc = 99.500000\n",
+      "epoch = 200\n",
+      "loss = 0.022405 | acc = 99.500000 | test loss = 0.010819 | test acc = 99.500000\n",
+      "epoch = 300\n",
+      "loss = 0.022174 | acc = 99.500000 | test loss = 0.010583 | test acc = 99.500000\n",
+      "epoch = 400\n",
+      "loss = 0.021955 | acc = 99.500000 | test loss = 0.010356 | test acc = 99.500000\n",
+      "epoch = 500\n",
+      "loss = 0.021746 | acc = 99.500000 | test loss = 0.010139 | test acc = 99.500000\n",
+      "epoch = 600\n",
+      "loss = 0.021545 | acc = 99.500000 | test loss = 0.009930 | test acc = 99.500000\n",
+      "epoch = 700\n",
+      "loss = 0.021351 | acc = 99.500000 | test loss = 0.009729 | test acc = 99.500000\n",
+      "epoch = 800\n",
+      "loss = 0.021164 | acc = 99.500000 | test loss = 0.009535 | test acc = 99.500000\n",
+      "epoch = 900\n",
+      "loss = 0.020982 | acc = 99.500000 | test loss = 0.009345 | test acc = 99.500000\n",
+      "epoch = 1000\n",
+      "loss = 0.020807 | acc = 99.500000 | test loss = 0.009162 | test acc = 99.500000\n",
+      "epoch = 1100\n",
+      "loss = 0.020637 | acc = 99.500000 | test loss = 0.008984 | test acc = 99.500000\n",
+      "epoch = 1200\n",
+      "loss = 0.020471 | acc = 99.500000 | test loss = 0.008812 | test acc = 99.500000\n",
+      "epoch = 1300\n",
+      "loss = 0.020316 | acc = 99.500000 | test loss = 0.008635 | test acc = 99.500000\n",
+      "epoch = 1400\n",
+      "loss = 0.020167 | acc = 99.500000 | test loss = 0.008459 | test acc = 99.500000\n",
+      "epoch = 1500\n",
+      "loss = 0.020023 | acc = 99.500000 | test loss = 0.008289 | test acc = 99.500000\n",
+      "epoch = 1600\n",
+      "loss = 0.019884 | acc = 99.500000 | test loss = 0.008133 | test acc = 99.500000\n",
+      "epoch = 1700\n",
+      "loss = 0.019749 | acc = 99.500000 | test loss = 0.007975 | test acc = 100.000000\n",
+      "epoch = 1800\n",
+      "loss = 0.019618 | acc = 99.500000 | test loss = 0.007825 | test acc = 100.000000\n",
+      "epoch = 1900\n",
+      "loss = 0.019492 | acc = 99.500000 | test loss = 0.007683 | test acc = 100.000000\n",
+      "epoch = 2000\n",
+      "loss = 0.019369 | acc = 99.500000 | test loss = 0.007537 | test acc = 100.000000\n",
+      "epoch = 2100\n",
+      "loss = 0.019251 | acc = 99.500000 | test loss = 0.007400 | test acc = 100.000000\n",
+      "epoch = 2200\n",
+      "loss = 0.019138 | acc = 99.500000 | test loss = 0.007263 | test acc = 100.000000\n",
+      "epoch = 2300\n",
+      "loss = 0.019028 | acc = 99.500000 | test loss = 0.007132 | test acc = 100.000000\n",
+      "epoch = 2400\n",
+      "loss = 0.018923 | acc = 99.500000 | test loss = 0.007007 | test acc = 100.000000\n",
+      "epoch = 2500\n",
+      "loss = 0.018822 | acc = 99.500000 | test loss = 0.006879 | test acc = 100.000000\n",
+      "epoch = 2600\n",
+      "loss = 0.018726 | acc = 99.500000 | test loss = 0.006758 | test acc = 100.000000\n",
+      "epoch = 2700\n",
+      "loss = 0.018633 | acc = 99.500000 | test loss = 0.006640 | test acc = 100.000000\n",
+      "epoch = 2800\n",
+      "loss = 0.018544 | acc = 99.500000 | test loss = 0.006527 | test acc = 100.000000\n",
+      "epoch = 2900\n",
+      "loss = 0.018458 | acc = 99.500000 | test loss = 0.006423 | test acc = 100.000000\n",
+      "epoch = 3000\n",
+      "loss = 0.018373 | acc = 99.500000 | test loss = 0.006325 | test acc = 100.000000\n",
+      "epoch = 3100\n",
+      "loss = 0.018292 | acc = 99.500000 | test loss = 0.006225 | test acc = 100.000000\n",
+      "epoch = 3200\n",
+      "loss = 0.018216 | acc = 99.500000 | test loss = 0.006124 | test acc = 100.000000\n",
+      "epoch = 3300\n",
+      "loss = 0.018145 | acc = 99.500000 | test loss = 0.006026 | test acc = 100.000000\n",
+      "epoch = 3400\n",
+      "loss = 0.018076 | acc = 99.500000 | test loss = 0.005933 | test acc = 100.000000\n",
+      "epoch = 3500\n",
+      "loss = 0.018008 | acc = 99.375000 | test loss = 0.005844 | test acc = 100.000000\n",
+      "epoch = 3600\n",
+      "loss = 0.017947 | acc = 99.375000 | test loss = 0.005751 | test acc = 100.000000\n",
+      "epoch = 3700\n",
+      "loss = 0.017889 | acc = 99.375000 | test loss = 0.005662 | test acc = 100.000000\n",
+      "epoch = 3800\n",
+      "loss = 0.017835 | acc = 99.375000 | test loss = 0.005578 | test acc = 100.000000\n",
+      "epoch = 3900\n",
+      "loss = 0.017783 | acc = 99.375000 | test loss = 0.005492 | test acc = 100.000000\n",
+      "epoch = 4000\n",
+      "loss = 0.017734 | acc = 99.375000 | test loss = 0.005417 | test acc = 100.000000\n",
+      "epoch = 4100\n",
+      "loss = 0.017689 | acc = 99.375000 | test loss = 0.005364 | test acc = 100.000000\n",
+      "epoch = 4200\n",
+      "loss = 0.017648 | acc = 99.375000 | test loss = 0.005316 | test acc = 100.000000\n",
+      "epoch = 4300\n",
+      "loss = 0.017606 | acc = 99.500000 | test loss = 0.005185 | test acc = 100.000000\n",
+      "epoch = 4400\n",
+      "loss = 0.017570 | acc = 99.375000 | test loss = 0.005194 | test acc = 100.000000\n",
+      "epoch = 4500\n",
+      "loss = 0.017535 | acc = 99.375000 | test loss = 0.005131 | test acc = 100.000000\n",
+      "epoch = 4600\n",
+      "loss = 0.017503 | acc = 99.375000 | test loss = 0.005073 | test acc = 100.000000\n",
+      "epoch = 4700\n",
+      "loss = 0.017472 | acc = 99.500000 | test loss = 0.004924 | test acc = 100.000000\n",
+      "epoch = 4800\n",
+      "loss = 0.017442 | acc = 99.500000 | test loss = 0.004879 | test acc = 100.000000\n",
+      "epoch = 4900\n",
+      "loss = 0.017414 | acc = 99.500000 | test loss = 0.004868 | test acc = 100.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#training loop\n",
+    "epochs = 5000\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    model_5.train()\n",
+    "\n",
+    "    y_logits = model_5(x_blob_t)\n",
+    "    y_preds = torch.softmax(y_logits, dim=1).argmax(dim=1)\n",
+    "\n",
+    "    loss = loss_fn(y_logits, y_blob_t)\n",
+    "\n",
+    "    acc = accuracy_fn(y_true=y_blob_t, y_pred=y_preds)\n",
+    "\n",
+    "    optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    model_5.eval()\n",
+    "    with torch.inference_mode():\n",
+    "        test_logits = model_5(x_blob_test)\n",
+    "        test_preds = torch.softmax(test_logits, dim=1).argmax(dim=1)\n",
+    "\n",
+    "        test_loss = loss_fn(test_logits, y_blob_test)\n",
+    "\n",
+    "        test_acc = accuracy_fn(y_true=y_blob_test, y_pred=test_preds)\n",
+    "\n",
+    "        if epoch % 100 == 0:\n",
+    "            print(f\"epoch = {epoch}\")\n",
+    "            print(f\"loss = {loss:4f} | acc = {acc:2f} | test loss = {test_loss:4f} | test acc = {test_acc:2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#training loop\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
