--- a/neural_network_classification.ipynb
+++ b/neural_network_classification.ipynb
@@ -22,7 +22,8 @@
     "from torch import nn\n",
     "import requests\n",
     "import numpy as np\n",
-    "from sklearn.datasets import make_blobs"
+    "from sklearn.datasets import make_blobs\n",
+    "import torchmetrics"
    ]
   },
   {
