--- a/computer_vision.ipynb
+++ b/computer_vision.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gc/VS-Projects/Learning-PyTorch/.venv/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torchvision\n",
     "from torchvision import datasets\n",
@@ -22,7 +31,7 @@
     "import matplotlib.pyplot as plt\n",
     "from torch import nn\n",
     "import numpy as np\n",
-    "from timeit import default_timer\n",
+    "from timeit import default_timer as timer\n",
     "from tqdm.auto import tqdm"
    ]
   },
@@ -342,10 +351,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/3 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 0\n",
+      "-----\n",
+      "batch no = 0/60000\n",
+      "batch no = 12800/60000\n",
+      "batch no = 25600/60000\n",
+      "batch no = 38400/60000\n",
+      "batch no = 51200/60000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 1/3 [00:15<00:31, 15.71s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss: 0.5893 | test loss: 0.5263 | train acc: 79.00 | test acc: 82.00\n",
+      "epoch: 1\n",
+      "-----\n",
+      "batch no = 0/60000\n",
+      "batch no = 12800/60000\n",
+      "batch no = 25600/60000\n",
+      "batch no = 38400/60000\n",
+      "batch no = 51200/60000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 2/3 [00:30<00:15, 15.35s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss: 0.4778 | test loss: 0.4864 | train acc: 83.24 | test acc: 82.76\n",
+      "epoch: 2\n",
+      "-----\n",
+      "batch no = 0/60000\n",
+      "batch no = 12800/60000\n",
+      "batch no = 25600/60000\n",
+      "batch no = 38400/60000\n",
+      "batch no = 51200/60000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:46<00:00, 15.59s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss: 0.4571 | test loss: 0.4952 | train acc: 83.98 | test acc: 82.77\n",
+      "train time on None = 46.797 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_time_start = timer()\n",
+    "\n",
+    "epochs = 3\n",
+    "\n",
+    "for epoch in tqdm(range(epochs)):\n",
+    "    print(f\"epoch: {epoch}\\n-----\")\n",
+    "\n",
+    "    train_loss = 0\n",
+    "    train_acc = 0\n",
+    "\n",
+    "    for batch, (x, y) in enumerate(train_dataloader):\n",
+    "        model_8.train()\n",
+    "\n",
+    "        y_pred = model_8(x)\n",
+    "\n",
+    "        loss = loss_fn(y_pred, y)\n",
+    "        train_loss += loss\n",
+    "\n",
+    "        train_acc += accuracy_fn(y_true=y, y_pred=y_pred.argmax(dim=1))\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        loss.backward()\n",
+    "\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        if batch % 400 == 0:\n",
+    "\n",
+    "            print(f\"batch no = {batch * len(x)}/{len(train_dataloader.dataset)}\")\n",
+    "    \n",
+    "    train_loss /= len(train_dataloader)\n",
+    "    train_acc /= len(train_dataloader)\n",
+    "    test_loss, test_acc = 0, 0\n",
+    "\n",
+    "    model_8.eval()\n",
+    "\n",
+    "    with torch.inference_mode():\n",
+    "\n",
+    "        for x_test, y_test in test_dataloader:\n",
+    "\n",
+    "            test_pred = model_8(x_test)\n",
+    "\n",
+    "            test_loss += loss_fn(test_pred, y_test)\n",
+    "\n",
+    "            test_acc += accuracy_fn(y_true=y_test, y_pred=test_pred.argmax(dim=1))\n",
+    "\n",
+    "        test_loss /= len(test_dataloader)\n",
+    "\n",
+    "        test_acc /= len(test_dataloader)\n",
+    "\n",
+    "    print(f\"train loss: {train_loss:.4f} | test loss: {test_loss:.4f} | train acc: {train_acc:.2f} | test acc: {test_acc:.2f}\")\n",
+    "\n",
+    "train_time_end = timer()\n",
+    "\n",
+    "total_time = print_train_time(start=train_time_start, end=train_time_end)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
