--- a/computer_vision.ipynb
+++ b/computer_vision.ipynb
@@ -498,6 +498,76 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## evaluate results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_model(model: torch.nn.Module,\n",
+    "               data_loader: torch.utils.data.DataLoader,\n",
+    "               loss_fn: torch.nn.Module,\n",
+    "               accuracy_fn):\n",
+    "\n",
+    "    loss, acc = 0, 0\n",
+    "\n",
+    "    model.eval()\n",
+    "    \n",
+    "    with torch.inference_mode():\n",
+    "        for x, y in data_loader:\n",
+    "            y_pred = model(x)\n",
+    "\n",
+    "            loss += loss_fn(y_pred, y)\n",
+    "            acc += accuracy_fn(y_true=y, y_pred=y_pred.argmax(dim=1))\n",
+    "\n",
+    "        loss /= len(data_loader)\n",
+    "        acc /= len(data_loader)\n",
+    "\n",
+    "    return {\"model_name\": model.__class__.__name__,\n",
+    "            \"model_loss\": loss.item(),\n",
+    "            \"model_acc\": acc}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'model_name': 'FashionMNISTModelv0', 'model_loss': 0.4951804578304291, 'model_acc': 82.76757188498402}\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_8_results = eval_model(model=model_8,data_loader=test_dataloader, loss_fn=loss_fn, accuracy_fn=accuracy_fn)\n",
+    "\n",
+    "print(model_8_results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## improve model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
