--- a/computer_vision.ipynb
+++ b/computer_vision.ipynb
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,9 +1011,303 @@
     "\n",
     "class FashionMNISTModelv2(nn.Module):\n",
     "\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, input_shape, hidden_units, output_shape):\n",
     "        super().__init__()\n",
-    "        "
+    "        self.conv_block_1 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=input_shape,\n",
+    "                      out_channels=hidden_units,\n",
+    "                      kernel_size=3,\n",
+    "                      stride=1,\n",
+    "                      padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(in_channels=hidden_units,\n",
+    "                      out_channels=hidden_units,\n",
+    "                      kernel_size=3,\n",
+    "                      stride=1,\n",
+    "                      padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2)\n",
+    "        )\n",
+    "        self.conv_block_2 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=hidden_units,\n",
+    "                      out_channels=hidden_units,\n",
+    "                      kernel_size=3,\n",
+    "                      stride=1,\n",
+    "                      padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(in_channels=hidden_units,\n",
+    "                      out_channels=hidden_units,\n",
+    "                      kernel_size=3,\n",
+    "                      stride=1,\n",
+    "                      padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2)\n",
+    "        )\n",
+    "        self.classifier = nn.Sequential(\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(in_features=hidden_units*7*7,\n",
+    "                      out_features=output_shape)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.conv_block_1(x)\n",
+    "        x = self.conv_block_2(x)\n",
+    "        x = self.classifier(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_10 = FashionMNISTModelv2(input_shape=1, hidden_units=10, output_shape=len(class_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 64, 64])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## conv2d explained\n",
+    "\n",
+    "images = torch.randn(size=(32, 3, 64, 64))\n",
+    "test_image = images[0]\n",
+    "\n",
+    "test_image.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10, 62, 62])\n"
+     ]
+    }
+   ],
+   "source": [
+    "conv_layer = nn.Conv2d(in_channels=3, out_channels=10, kernel_size=3, stride=1, padding=0)\n",
+    "\n",
+    "conv_output = conv_layer(test_image.unsqueeze(0)).squeeze()\n",
+    "\n",
+    "print(conv_output.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 32, 32]) torch.Size([10, 31, 31])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#maxpool2d explained\n",
+    "\n",
+    "max_pool = nn.MaxPool2d(kernel_size=2)\n",
+    "\n",
+    "pool_out = max_pool(test_image)\n",
+    "pool_out2 = max_pool(conv_output)\n",
+    "\n",
+    "print(pool_out.shape, pool_out2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 10, 14, 14])\n",
+      "torch.Size([1, 10, 7, 7])\n",
+      "torch.Size([1, 10])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.0193, -0.0044, -0.0418, -0.0577,  0.0374,  0.0055, -0.0492,  0.0296,\n",
+       "         -0.0415, -0.0255]], grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_10(image.unsqueeze(dim=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#setup loss and optimizer\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.SGD(params=model_10.parameters(), lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/3 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss: 0.3692 | train acc: 86.74\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 1/3 [01:21<02:43, 81.93s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test loss: 0.3962 | test acc: 85.44\n",
+      "train loss: 0.3276 | train acc: 88.19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 2/3 [02:19<01:07, 67.46s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test loss: 0.3390 | test acc: 87.44\n",
+      "train loss: 0.3038 | train acc: 89.12\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [03:12<00:00, 64.04s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test loss: 0.3109 | test acc: 88.82\n",
+      "train time on None = 192.126 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#train and test\n",
+    "\n",
+    "time_start = timer()\n",
+    "\n",
+    "epochs = 3\n",
+    "\n",
+    "for epoch in tqdm(range(epochs)):\n",
+    "\n",
+    "    train_step(model=model_10,\n",
+    "               dataloader=train_dataloader,\n",
+    "               loss_fn=loss_fn,\n",
+    "               optimizer=optimizer,\n",
+    "               accuracy_fn=accuracy_fn)\n",
+    "    \n",
+    "    test_step(model=model_10,\n",
+    "              dataloader=test_dataloader,\n",
+    "              loss=loss_fn,\n",
+    "              accuracy_fn=accuracy_fn)\n",
+    "\n",
+    "end_time = timer()\n",
+    "\n",
+    "total = print_train_time(start=time_start, end=end_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'model_name': 'FashionMNISTModelv2', 'model_loss': 0.31092819571495056, 'model_acc': 88.81789137380191}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#eval model\n",
+    "\n",
+    "model_10_results = eval_model(\n",
+    "    model=model_10,\n",
+    "    data_loader=test_dataloader,\n",
+    "    loss_fn=loss_fn,\n",
+    "    accuracy_fn=accuracy_fn\n",
+    ")\n",
+    "\n",
+    "print(model_10_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#compare models\n",
+    "\n",
+    "compare_results = pd.DataFrame([model_8_results, model_9_results, model_10_results])"
    ]
   }
  ],
