--- a/computer_vision.ipynb
+++ b/computer_vision.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gc/VS-Projects/Learning-PyTorch/.venv/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torchvision\n",
     "from torchvision import datasets\n",
@@ -32,7 +23,8 @@
     "from torch import nn\n",
     "import numpy as np\n",
     "from timeit import default_timer as timer\n",
-    "from tqdm.auto import tqdm"
+    "from tqdm.auto import tqdm\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -1301,13 +1293,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>model_loss</th>\n",
+       "      <th>model_acc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>FashionMNISTModelv0</td>\n",
+       "      <td>0.489918</td>\n",
+       "      <td>82.448083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>FashionMNISTModelv1</td>\n",
+       "      <td>1.018959</td>\n",
+       "      <td>64.546725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FashionMNISTModelv2</td>\n",
+       "      <td>0.310928</td>\n",
+       "      <td>88.817891</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            model_name  model_loss  model_acc\n",
+       "0  FashionMNISTModelv0    0.489918  82.448083\n",
+       "1  FashionMNISTModelv1    1.018959  64.546725\n",
+       "2  FashionMNISTModelv2    0.310928  88.817891"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#compare models\n",
     "\n",
-    "compare_results = pd.DataFrame([model_8_results, model_9_results, model_10_results])"
+    "compare_results = pd.DataFrame([model_8_results, model_9_results, model_10_results])\n",
+    "\n",
+    "compare_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 313/313 [00:05<00:00, 58.29it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([9, 2, 1, 1, 6, 1, 4, 6, 5, 7])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#confusion matrix\n",
+    "\n",
+    "y_preds = []\n",
+    "model_10.eval()\n",
+    "with torch.inference_mode():\n",
+    "    for x, y in tqdm(test_dataloader):\n",
+    "\n",
+    "        y_logits = model_10(x)\n",
+    "\n",
+    "        y_pred = torch.softmax(y_logits.squeeze(), dim=0).argmax(dim=1)\n",
+    "\n",
+    "        y_preds.append(y_pred)\n",
+    "\n",
+    "y_pred_tensor = torch.cat(y_preds)\n",
+    "y_pred_tensor[:10]"
    ]
   }
  ],
