--- a/computer_vision.ipynb
+++ b/computer_vision.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,9 @@
     "import numpy as np\n",
     "from timeit import default_timer as timer\n",
     "from tqdm.auto import tqdm\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from mlxtend.plotting import plot_confusion_matrix\n",
+    "from torchmetrics import ConfusionMatrix"
    ]
   },
   {
@@ -1404,6 +1406,38 @@
     "\n",
     "y_pred_tensor = torch.cat(y_preds)\n",
     "y_pred_tensor[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[671,   7,  28,  66,   9,   1, 210,   0,   8,   0],\n",
+       "        [ 10, 850,   3, 100,  25,   0,   9,   0,   3,   0],\n",
+       "        [ 13,   4, 756,  18, 111,   0,  94,   0,   4,   0],\n",
+       "        [ 20,   7,  12, 896,  28,   0,  33,   0,   3,   1],\n",
+       "        [  9,   4,  82,  68, 715,   0, 113,   0,   8,   1],\n",
+       "        [  5,   1,   1,   5,   0, 857,   1,  36,  70,  24],\n",
+       "        [ 96,   8,  80,  66,  88,   0, 652,   0,  10,   0],\n",
+       "        [  1,   0,   0,   0,   0,  46,   0, 898,  15,  40],\n",
+       "        [ 20,   2,   9,  16,  12,   4,  32,   5, 898,   2],\n",
+       "        [  0,   0,   0,   4,   0,  22,   2,  90,  11, 871]])"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confmat = ConfusionMatrix(num_classes=len(class_names))\n",
+    "confmat_tensor = confmat(preds=y_pred_tensor, target=test_data.targets)\n",
+    "\n",
+    "confmat_tensor"
    ]
   }
  ],
