--- a/computer_vision.ipynb
+++ b/computer_vision.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,8 @@
     "from tqdm.auto import tqdm\n",
     "import pandas as pd\n",
     "from mlxtend.plotting import plot_confusion_matrix\n",
-    "from torchmetrics import ConfusionMatrix"
+    "from torchmetrics import ConfusionMatrix\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -1462,6 +1463,36 @@
     "    class_names=class_names,\n",
     "    figsize=(10,7)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save and load model\n",
+    "\n",
+    "model_path = Path(\"models\")\n",
+    "model_path.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "model_name = \"model_10.pth\"\n",
+    "save_path = model_path / model_name\n",
+    "\n",
+    "torch.save(obj=model_10.state_dict(), f=save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_10_1 = FashionMNISTModelv2()\n",
+    "\n",
+    "model_10_1.load_state_dict(torch.load(f=save_path))\n",
+    "\n",
+    "model_10.state_dict(), model_10_1.state_dict()"
    ]
   }
  ],
